// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`World should render nothing with 0 x 0 size: [[Array]] 1`] = `""`;

exports[`World should render nothing with 0 x 0 size: [] 1`] = `""`;

exports[`World should render with 1 x 1 size and creature is dead 1`] = `
<Styled(div)>
  <Creature
    isAlive={false}
    key="{00}"
    onClick={[MockFunction]}
    x={0}
    y={0}
  />
  <br
    key="0"
  />
</Styled(div)>
`;

exports[`World should render with 2 x 2 size filled with creatures 1`] = `
<Styled(div)>
  <Creature
    isAlive={false}
    key="{00}"
    onClick={[MockFunction]}
    x={0}
    y={0}
  />
  <Creature
    isAlive={false}
    key="{01}"
    onClick={[MockFunction]}
    x={0}
    y={1}
  />
  <Creature
    isAlive={false}
    key="{02}"
    onClick={[MockFunction]}
    x={0}
    y={2}
  />
  <br
    key="0"
  />
  <Creature
    isAlive={false}
    key="{10}"
    onClick={[MockFunction]}
    x={1}
    y={0}
  />
  <Creature
    isAlive={false}
    key="{11}"
    onClick={[MockFunction]}
    x={1}
    y={1}
  />
  <Creature
    isAlive={false}
    key="{12}"
    onClick={[MockFunction]}
    x={1}
    y={2}
  />
  <br
    key="1"
  />
  <Creature
    isAlive={false}
    key="{20}"
    onClick={[MockFunction]}
    x={2}
    y={0}
  />
  <Creature
    isAlive={false}
    key="{21}"
    onClick={[MockFunction]}
    x={2}
    y={1}
  />
  <Creature
    isAlive={false}
    key="{22}"
    onClick={[MockFunction]}
    x={2}
    y={2}
  />
  <br
    key="2"
  />
</Styled(div)>
`;
